--- a/res/layout/dialog_level_success.xml
+++ b/res/layout/dialog_level_success.xml
@@ -23,11 +23,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
             android:shadowColor="#888"
             android:shadowDx="-1"
             android:shadowDy="1"
             android:shadowRadius="1"
-            android:layout_marginTop="5dp"
             android:text="@string/level_success_title"
             android:textColor="#00B219"
             android:textSize="30sp"
@@ -40,10 +40,10 @@
             android:layout_alignLeft="@+id/level_success_buttons_layout"
             android:layout_alignRight="@+id/level_success_buttons_layout"
             android:layout_below="@+id/level_success_title"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
             android:background="#ccc" />
 
         <TextView
@@ -52,14 +52,14 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/level_success_title_divider"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:gravity="center"
+            android:includeFontPadding="false"
             android:text="Le Colisée"
             android:textColor="#888"
             android:textSize="26sp"
-            android:includeFontPadding="false"
             android:textStyle="bold" />
-         
+
         <TextView
             android:id="@+id/level_success_message"
             android:layout_width="wrap_content"
@@ -78,40 +78,44 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/level_success_message"
-            android:gravity="center"
             android:layout_marginTop="2dp"
-            android:orientation="horizontal" >
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp" >
 
             <Button
                 android:id="@+id/level_success_back_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
-                android:paddingRight="15dp"
-                android:paddingLeft="15dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:background="@drawable/button_level_success_dialog_selector"
                 android:gravity="center"
+                android:paddingBottom="10dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:paddingTop="10dp"
                 android:text="Back"
                 android:textColor="#888"
-                android:background="@drawable/button_close_level_success_dialog"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:visibility="gone" />
-            
+
             <Button
                 android:id="@+id/level_success_close_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
-                android:paddingRight="15dp"
-                android:paddingLeft="15dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:background="@drawable/button_level_success_dialog_selector"
                 android:gravity="center"
+                android:paddingBottom="10dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:paddingTop="10dp"
                 android:text="Close"
                 android:textColor="#888"
-                android:background="@drawable/button_close_level_success_dialog"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -120,14 +124,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:paddingRight="10dp"
-                android:paddingLeft="15dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
+                android:background="@drawable/button_level_success_dialog_selector"
                 android:drawablePadding="8dp"
                 android:drawableRight="@drawable/ic_next"
-                android:background="@drawable/button_close_level_success_dialog"
                 android:gravity="center"
+                android:paddingBottom="5dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="10dp"
+                android:paddingTop="5dp"
                 android:text="Next"
                 android:textColor="#888"
                 android:textSize="16sp"
