--- a/res/layout/include_hint_map.xml
+++ b/res/layout/include_hint_map.xml
@@ -1,12 +1,10 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <ImageView 
-        android:id="@+id/mapLocation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:scaleType="fitCenter"
-        android:src="@drawable/world_map_zoom4"
-        android:layout_marginTop="15dp" />
-    
-</merge>
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mapLocation"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="15dp"
+    android:paddingTop="15dp"
+    android:scaleType="fitCenter"
+    android:adjustViewBounds="true"
+    android:src="@drawable/world_map_zoom4" />
