--- a/res/layout/fragment_settings.xml
+++ b/res/layout/fragment_settings.xml
@@ -151,6 +151,7 @@
         android:shadowRadius="1"
         android:visibility="invisible" />
 
+    <!--  android:layout_marginTop="5dp" -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -158,7 +159,6 @@
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="5dp"
         android:paddingBottom="2dp"
         android:paddingRight="5dp"
         android:paddingTop="2dp"
