Word in progress: Clickable letters to fill response

--- a/res/layout/fragment_level.xml
+++ b/res/layout/fragment_level.xml
@@ -104,6 +104,16 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </RelativeLayout>
+        
+         <TableLayout
+	        android:id="@+id/tableLetters"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:gravity="center_horizontal"
+	        android:layout_below="@+id/levelOpenedlayout" >
+            
+         </TableLayout>
+        
     </RelativeLayout>
-
+    
 </ScrollView>
