--- a/res/layout/item_simple_stat.xml
+++ b/res/layout/item_simple_stat.xml
@@ -2,14 +2,14 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content">
+      android:layout_height="wrap_content"
+      android:padding="10dp">
 
 	  <LinearLayout
 	      android:layout_width="match_parent"
 	      android:layout_height="wrap_content"
 	      android:orientation="horizontal"
-	      android:layout_margin="5dp"
-	      android:background="@drawable/bg_section_rounded">
+	      android:layout_margin="5dp">
 	   	<RelativeLayout
 	       	android:layout_width="match_parent"
 	    	android:layout_height="wrap_content" >
