--- a/res/layout/fragment_stats.xml
+++ b/res/layout/fragment_stats.xml
@@ -9,63 +9,47 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
     
-    <TextView
-	    android:id="@+id/StatsAchievementsLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Achievements"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginRight="15dp"
-        android:textColor="#333"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        />
+<!--     <TextView -->
+<!-- 	    android:id="@+id/StatsAchievementsLabel" -->
+<!--         android:layout_width="match_parent" -->
+<!--         android:layout_height="wrap_content" -->
+<!--         android:text="Achievements" -->
+<!--         android:layout_marginTop="15dp" -->
+<!--         android:layout_marginLeft="17dp" -->
+<!--         android:layout_marginRight="15dp" -->
+<!--         android:textColor="#333" -->
+<!--         android:textSize="20sp" -->
+<!--         android:textStyle="bold" -->
+<!--         /> -->
 
     <LinearLayout 
-        android:id="@+id/StatsAchievementsListView"
+        android:id="@+id/StatsAchievementsContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/bg_section_rounded"
         android:layout_margin="10dp" />
-    	
-<!--     <ListView  -->
-<!--         android:id="@+id/StatsAchievementsListView" -->
+    
+<!--     <TextView -->
+<!-- 	    android:id="@+id/StatsSimpleLabel" -->
 <!--         android:layout_width="match_parent" -->
-<!--     	android:layout_height="wrap_content" -->
-<!--     	android:divider="#88888888" -->
-<!--     	android:dividerHeight="1dp" -->
-<!--     	android:layout_marginLeft="15dp" -->
+<!--         android:layout_height="wrap_content" -->
+<!--         android:text="@string/setting_global_setup" -->
+<!--         android:layout_marginTop="15dp" -->
+<!--         android:layout_marginLeft="17dp" -->
 <!--         android:layout_marginRight="15dp" -->
-<!--         android:layout_marginBottom="15dp" -->
-<!--         android:layout_marginTop="5dp" -->
-<!--         android:background="@drawable/bg_section_rounded" /> -->
+<!--         android:textColor="#333" -->
+<!--         android:textSize="20sp" -->
+<!--         android:textStyle="bold" -->
+<!--         /> -->
     
-    <TextView
-	    android:id="@+id/StatsSimpleLabel"
-        android:layout_width="match_parent"
+    <LinearLayout 
+        android:id="@+id/SimpleStatsContainer"
+		android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/setting_global_setup"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginRight="15dp"
-        android:textColor="#333"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        />
-    
-    <ListView 
-        android:id="@+id/StatsSimpleListView"
-        android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:divider="#88888888"
-    	android:dividerHeight="1dp"
-    	android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/bg_section_rounded" />
+        android:orientation="vertical"
+        android:background="@drawable/bg_section_rounded"
+        android:layout_margin="10dp" />
 
     </LinearLayout>
 </ScrollView>
